# signal-standard

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  NON_IDEAL_AGENTS.md  README.md  build.rs  flake.nix
schema/: lib.schema
src/: lib.rs
src/schema/: lib.rs
tests/: round_trip.rs
